--- a/CommandButton.xaml
+++ b/CommandButton.xaml
@@ -50,25 +50,36 @@
                 BorderThickness="0" Padding="3">
             <Button.Style>
                 <Style TargetType="Button">
-                    <Setter Property="Foreground" Value="{Binding ForegroundColourBrush}"/>
-                    <Setter Property="Background" Value="{Binding BackgroundColourBrush}"/>
-                    <Setter Property="FontSize" Value="{Binding FontSize}"/>
+                    <Setter Property="Foreground" Value="{Binding DefaultStyle.ForegroundColourBrush}"/>
+                    <Setter Property="Background" Value="{Binding DefaultStyle.BackgroundColourBrush}"/>
+                    <Setter Property="FontSize" Value="{Binding DefaultStyle.FontSize}"/>
+                    <Setter Property="FontFamily" Value="{Binding DefaultStyle.FontFamily}"/>
+                    <Setter Property="FontWeight" Value="{Binding DefaultStyle.FontWeight}"/>
+                    <Setter Property="FontStyle" Value="{Binding DefaultStyle.FontStyle}"/>
                     <Style.Triggers>
                         <Trigger Property="IsMouseOver" Value="true">
-                            <Setter Property="Background" Value="{Binding BackgroundHoverColourBrush}"/>
-                            <Setter Property="Foreground" Value="{Binding ForegroundHoverColourBrush}"/>
-                            <Setter Property="FontSize" Value="{Binding HoverFontSize}"/>
+                            <Setter Property="Background" Value="{Binding HoverStyle.BackgroundColourBrush}"/>
+                            <Setter Property="Foreground" Value="{Binding HoverStyle.ForegroundColourBrush}"/>
+                            <Setter Property="FontSize" Value="{Binding HoverStyle.FontSize}"/>
+                            <Setter Property="FontFamily" Value="{Binding HoverStyle.FontFamily}"/>
+                            <Setter Property="FontWeight" Value="{Binding HoverStyle.FontWeight}"/>
+                            <Setter Property="FontStyle" Value="{Binding HoverStyle.FontStyle}"/>
                         </Trigger>
                         <Trigger Property="IsPressed" Value="true">
-                            <Setter Property="Background" Value="{Binding BackgroundPressedColourBrush}"/>
-                            <Setter Property="Foreground" Value="{Binding ForegroundPressedColourBrush}"/>
-                            <Setter Property="FontSize" Value="{Binding PressedFontSize}"/>
+                            <Setter Property="Background" Value="{Binding PressedStyle.BackgroundColourBrush}"/>
+                            <Setter Property="Foreground" Value="{Binding PressedStyle.ForegroundColourBrush}"/>
+                            <Setter Property="FontSize" Value="{Binding PressedStyle.FontSize}"/>
+                            <Setter Property="FontFamily" Value="{Binding PressedStyle.FontFamily}"/>
+                            <Setter Property="FontWeight" Value="{Binding PressedStyle.FontWeight}"/>
+                            <Setter Property="FontStyle" Value="{Binding PressedStyle.FontStyle}"/>
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="false">
-                            <Setter Property="Background" Value="{Binding BackgroundColourBrush}"/>
-                            <Setter Property="Foreground" Value="{Binding ForegroundColourBrush}"/>
-                            <Setter Property="FontSize" Value="{Binding FontSize}"/>
+                            <Setter Property="Background" Value="{Binding DefaultStyle.BackgroundColourBrush}"/>
+                            <Setter Property="Foreground" Value="{Binding DefaultStyle.ForegroundColourBrush}"/>
+                            <Setter Property="FontFamily" Value="{Binding DefaultStyle.FontFamily}"/>
+                            <Setter Property="FontSize" Value="{Binding DefaultStyle.FontSize}"/>
                             <Setter Property="FontWeight" Value="Thin" />
+                            <Setter Property="FontStyle" Value="{Binding DefaultStyle.FontStyle}"/>
                         </Trigger>
                     </Style.Triggers>
                 </Style>
