Sending text working

--- a/App.xaml
+++ b/App.xaml
@@ -36,5 +36,94 @@
             <Setter Property="FontSize" Value="15pt"/>
             <Setter Property="Margin" Value="5px"/>
          </Style>
+
+        <!--<ListBox>
+            <ListBox.Template>
+                <ControlTemplate>
+
+                </ControlTemplate>
+            </ListBox.Template>
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>-->
+        <Style x:Key="ApplicationTargetList" TargetType="ListBox">
+            <Style.Setters>
+                <Setter Property="MinHeight" Value="100"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="ListBox">
+                            <Border BorderThickness="2" BorderBrush="CornflowerBlue" Background="AliceBlue">
+                                <DockPanel MaxHeight="100">
+                                    <DockPanel DockPanel.Dock="Left" MaxWidth="300">
+                                        <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Left">
+                                            <Button Name="TargetAdd" Margin="0,2" Width="20" Height="20">
+                                                <Bold>+</Bold>
+                                            </Button>
+                                            <Button Name="TargetRemove" Margin="2,2" Width="20" Height="20">
+                                                <Bold>-</Bold>
+                                            </Button>
+                                        </StackPanel>
+                                        <ScrollViewer>
+                                            <ItemsPresenter Name="ItemsPresenter" />
+                                        </ScrollViewer>
+                                    </DockPanel>
+                                    <Grid DataContext="{TemplateBinding SelectedItem}">
+                                        <Grid.Style>
+                                            <Style>
+                                                <Style.Triggers>
+                                                    <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=ListBox}, Path=SelectedIndex}" Value="-1">
+                                                        <Setter Property="Grid.Visibility" Value="Hidden" />
+                                                    </DataTrigger>
+                                                </Style.Triggers>
+                                            </Style>
+                                        </Grid.Style>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="auto"/>
+                                            <RowDefinition Height="auto"/>
+                                        </Grid.RowDefinitions>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="auto"/>
+                                            <ColumnDefinition Width="auto"/>
+                                            <ColumnDefinition/>
+                                        </Grid.ColumnDefinitions>
+                                        <TextBlock Grid.Row="0" Grid.Column="0">Application:</TextBlock>
+                                        <CheckBox Grid.Row="0" Grid.Column="1" Margin="5,0" IsChecked="{Binding UseRegexForExecutable}">
+                                            <TextBlock>Use regex</TextBlock>
+                                        </CheckBox>
+                                        <TextBox Grid.Row="0" Grid.Column="2" HorizontalAlignment="Stretch" Text="{Binding ExecutablePattern}"/>
+
+                                        <TextBlock Grid.Row="1" Grid.Column="0" >Window title:</TextBlock>
+                                        <CheckBox Grid.Row="1" Grid.Column="1" Margin="5,0" IsChecked="{Binding UseRegexForWindowTitle}">
+                                            <TextBlock>Use regex</TextBlock>
+                                        </CheckBox>
+                                        <TextBox Grid.Row="1" Grid.Column="2"  HorizontalAlignment="Stretch" Text="{Binding WindowTitlePattern}"/>
+                                    </Grid>
+                                </DockPanel>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+                <Setter Property="ItemTemplate">
+                    <Setter.Value>
+                        <DataTemplate DataType="local:ApplicationMatcherViewModel">
+                            <TextBlock>
+                                <Run Text="Exe: (re: " />
+                                <Run Run.Text="{Binding Path=UseRegexForExecutable}"/>
+                                <Run Text=") "/>
+                                <Run Text="{Binding Path=ExecutablePattern}"/>
+                                <Run Text=" | Title: (re: "/>
+                                <Run Run.Text="{Binding Path=UseRegexForWindowTitle}"/>
+                                <Run Text=") "/>
+                                <Run Text="{Binding Path=WindowTitlePattern}"/>
+                            </TextBlock>
+                        </DataTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style.Setters>
+        </Style>
+        
     </Application.Resources>
 </Application>
